--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
   },
-  "homepage": "https://<seu-usuario>.github.io/criptomoedas"
+  "homepage": "https://joaraujoo.github.io/criptomoedas"
 }
